--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,34 @@
 }
 
 html{
+    scroll-behavior: smooth;
     font-family: Arial, Helvetica, sans-serif;
 }
+.text-while{
+    color: #fff !important;
+}
+/* Common */
+
+/* .row{
+    margin-left: -8px;
+    margin-right: -8px;
+}
+.col{
+    float: left;
+    padding-right: 8px;
+    padding-left: 8px;
+
+}
+.col-half{
+    width: 50%;
+}
+.col-third{
+    width: 33.33333%;
+} */
+
+
 #clear{
-    clear: both;
+    clear:both;
 }
 #main{
 
@@ -18,6 +42,7 @@ html{
     display: inline-block;
 }
 #header{
+    overflow: visible;
     z-index: 1;
     position: fixed;
     top: 0;
@@ -25,13 +50,15 @@ html{
     right: 0;
     height: 46px;
     background-color: #000;
-
 }
-#nav, .subnav{
+#nav .subnav{
     list-style-type: none;
 
 }
 #nav > li{
+    display: inline-block;
+}
+#nav > li:first-child{
     display: inline-block;
 }
 #nav li{
@@ -67,35 +94,54 @@ html{
     color: #000;
 }
 #nav .subnav {
+    
     min-width: 160px;
     display: none;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     background-color: #fff;
-position: absolute;
+    position: fixed;
+    z-index: 1;
+}
+#header .mobile-menu:hover {
+    color: #000;
+    background-color: #ccc;
+}
+.mobile-menu:hover .icon-menu{
+    color: #000;
 }
 #header .search-button:hover{
     color: #fff;
     background-color: #f44336;
     cursor: pointer;
 }
+#header .mobile-menu,
 #header .search-button{
     float: right;
     padding: 0 20px;
+}
+.icon-menu {
+    padding: 12px 12px;
+    color: #fff;
+    font-size: 20px;
+    line-height: 46px;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+#mobile-menu{
+    line-height: 46px;
 }
 #header .search-button .search-icon{
     color: #fff;
     font-size: 20px;
     line-height: 46px;
-
-
-
 }
 
 #slider{
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
-    background: url('/assets/img/slider/slider1.jpg') top center / cover no-repeat;
+    background: url('../img/slider/slider1.jpg') top center / cover no-repeat;
 }
 #slider .text-content{
     position: absolute;
@@ -113,17 +159,27 @@ position: absolute;
 #slider .text-discription{
     margin-top: 25px;
     font-size: 15px;
+    text-shadow: 0 0 1px #000;
 }
-#content{
+
+#main{
+    overflow: hidden;
+}
+#content{;
 
 }
 #content .content-section{
     width: 800px;
-    padding: 64px 0;
+    padding: 64px 0 112px;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+    max-width: 100%;
+    box-sizing: border-box;
+
 }
-#content .section-heading{
+.section-heading{
  text-align: center;
  letter-spacing: 500;
  font-weight: 500;
@@ -132,7 +188,7 @@ position: absolute;
 
 }
 
-#content .section-sub-heading{
+.section-sub-heading{
     padding: 25px 0;
     text-align: center;
     font-style: italic;
@@ -140,30 +196,337 @@ position: absolute;
     font-size: 15px;
 
 }
-#content .about-content{
+.about-content{
     text-align: center;
     text-align: justify;
     line-height: 1.4;
     font-size: 15px;
 }
-#content .member-list{
-    overflow: hidden;
+.member-list{
      margin-top: 48px;
 }
-#content .member-item{
+.member-item{
     width: calc(100% / 3);
     float: left;
     text-align: center;
 }
-#content .member-name{
+.member-name{
     font-size: 15px;
 }
-#content .member-img{
+.member-img{
     margin-top: 15px;
     width: 154px;
     border-radius: 4px;
 }
-
-#footer{
+/*Tour-Section*/
+.tour-section{
+    overflow: hidden;
+    background-color: #000;
+}
+.ticket-list{
+    margin-top: 40px;
+    background-color: #fff;
+}
+.ticket-list li{
+    list-style: none;
+    font-size: 15px;
+    padding: 11px 16px;
+    border-bottom: 1px solid #ddd;
+    color: #757575;
+}
+.ticket-list .sold-out{
+    background-color: #f44336;
+    color: #fff;
+    padding: 3px 4px;
+    margin-left: 16px;
+}
+.ticket-list .quantity{
+background-color: #000;
+color: #fff;
+border-radius: 50%;
+float: right;
+width: 24px;
+height: 24px;
+text-align: center;
+line-height: 24px;
+margin-top: -2px ;
+}
+/* Place Tickets */
+.place-list {
+    margin-top: 32px;
+    /* padding-bottom: 48px ;
+    margin: 32px -11px 0px -8px; */
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 32px;
+}
+.place-item{
+    flex-basis: 30%;
+    /* float: left; */
 
 }
+.place-img{
+    display: block;
+    width: 100%;
+
+}
+.place-img:hover{
+    opacity: 0.6;
+
+}
+.place-body{
+    font-size: 15px;
+    padding: 16px;
+    color: #333;
+    background-color: #fff;
+
+}
+.place-heading{
+    font-weight: 600;
+
+}
+.place-time{
+    color: #757575;
+    margin-top: 15px;
+}
+.place-discription{
+    line-height: 1.4;
+    margin-top: 15px;
+}
+.btn{
+    color: #fff;
+    background-color: #130f40;
+    text-decoration: none; 
+    padding: 11px 16px;
+    display: inline-block;
+    margin-top: 15px;
+    border: none;
+    -webkit-appearance: none;
+    appearance: none;
+}
+.btn:hover{
+    cursor: pointer;
+    color: #000;
+    background-color: #ccc;
+}
+/* Ticket Box */
+.modal{
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.4);
+
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+.modal.open{
+    display: flex;
+}
+.modal-container{
+    position: relative;
+    background: #fff;
+    width: 900px;
+    max-width: calc(100% - 32px);
+    min-height: 200px;
+    animation: modalFaceIn ease 0.6s;
+
+}
+.modal-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #009688;
+    height: 130px;
+    font-size: 30px;
+    color: #fff;
+}
+.modal-header .modal-heading-icon{
+    margin-right: 16px;
+}
+.modal .modal-close{
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: #fff;
+    padding: 12px;
+    cursor: pointer;
+    opacity: 0.8;
+}
+.modal .modal-close:hover{
+    color: #000;
+    background: #ccc;
+    opacity: 1;
+
+}
+.modal .modal-close:active {
+    opacity: 0;
+}
+
+.modal .modal-body{
+    padding: 16px 16px 0 16px;
+}
+.modal .modal-label{
+    display: block;
+    font-size: 15px;
+    margin-bottom: 12px;
+}
+.modal .modal-input{
+
+    padding: 8px 4px 8px 4px;
+    font-size: 15px;
+    width: 100%;
+    border: 1px solid #ccc;
+    margin-bottom: 24px;
+    box-sizing: border-box;
+}
+#buy-tickets{
+    background: #009688;
+    border: none;
+    color: #fff;
+    width: 100%;
+    font-size: 15px;
+    text-transform: uppercase;
+    padding: 16px;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+#buy-tickets:hover{
+    opacity: 0.9;
+}
+.modal-footer{
+    padding: 24px 0;
+    font-size: 15px;
+    text-align: end;
+    background: white;
+    width: 100%;
+}
+.modal-help{
+    color: #000;
+ 
+}
+.modal-footer a {
+    color: #2196f3;
+}
+
+@keyframes modalFaceIn {
+    from {
+        opacity: 0;
+        transform: translateY(-140px);
+    } to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+/* Contact-Section */
+.full-contact{
+    margin-top: 48px;
+
+}
+.info-web-contact:hover{
+    opacity: 1;
+}
+.info-web-contact i[class*="ti-"]{
+    width:30px;
+    display: inline;
+    opacity: 0.8;
+}
+.info-contact{
+    font-size: 18px;
+    line-height: 1.2;
+}
+.form-contact{
+
+    float: right;
+    /* display: flex;
+    justify-content: right; */
+    font-size: 15px;
+    /* line-height: 22.5px; */
+}
+.contact-nameandemail-form{
+    display: inline-flex;
+    /* justify-content: space-evenly; */
+
+}
+.contact-nameandemail-form .form-name{
+    margin-right: 8px
+
+}
+.contact-nameandemail-form .form-email{
+    margin-left: 8px;
+}
+.contact-message-form{
+    margin-top: 11px;
+}
+.form-control-message{
+    width: 352px;
+    padding: 10px;
+    border: 1px solid #ccc;
+}
+.form-control-name,
+.form-control-email{
+    padding: 10px;
+    border: 1px solid #ccc;
+}
+.send-summit{
+    border: none;
+    padding: 10px 16px;
+    background: #130f40;
+    color: #fff;
+    float: right;
+    margin-top: 18px;
+}
+.send-summit:hover{
+    background: #ccc;
+    color: #000;
+    cursor: pointer;
+}
+.info-contact{
+    /* display: flex;
+    justify-content: left; */
+    float: left;
+    font-size:18px;
+    margin: 0px 0px 16px;
+    opacity: 1;
+}
+/* Map */
+.map-section img{
+    width: 100%;
+    filter: grayscale(50%);
+}
+/*Footer-Section*/
+
+#footer{
+   padding: 64px 16px;
+   text-align: center;
+
+
+}
+.socials-list{
+    font-size: 22px;
+    
+}
+.socials-list a{
+    color: rgba(0, 0, 0, 0.6);
+    text-decoration: none;
+}
+.socials-list a:hover, .copyright a:hover{
+    color: rgba(0, 0, 0, 0.4);
+}
+.copyright{
+    margin-top: 15px;
+    color: rgba(0, 0, 0, 0.6);
+}
+.copyright a{
+    color: rgba(0, 0, 0, 0.6);
+}
+.contact-info a{
+    color: #101aef;
+    opacity: 0.8;
+}
+.contact-info a:hover{
+    opacity: 1;
+}
+/* Responsive Mobile */
