--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -1,17 +1,19 @@
 /* Reset CSS */
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: content-box;
 }
 
-html{
+html {
     scroll-behavior: smooth;
     font-family: Arial, Helvetica, sans-serif;
 }
-.text-while{
+
+.text-while {
     color: #fff !important;
 }
+
 /* Common */
 
 /* .row{
@@ -32,16 +34,17 @@ html{
 } */
 
 
-#clear{
-    clear:both;
+#clear {
+    clear: both;
 }
-#main{
 
-}
+#main {}
+
 #nav {
     display: inline-block;
 }
-#header{
+
+#header {
     overflow: visible;
     z-index: 1;
     position: fixed;
@@ -51,50 +54,57 @@ html{
     height: 46px;
     background-color: #000;
 }
-#nav .subnav{
+
+#nav .subnav {
     list-style-type: none;
 
 }
-#nav > li{
+
+#nav>li {
     display: inline-block;
 }
-#nav > li:first-child{
+
+#nav>li:first-child {
     display: inline-block;
 }
-#nav li{
+
+#nav li {
     position: relative;
 }
-#nav>li>a{
+
+#nav>li>a {
     text-transform: uppercase;
- color: #fff;
-    
+    color: #fff;
+
 }
-#nav li a{
+
+#nav li a {
     text-decoration: none;
     line-height: 46px;
     padding: 0 24px;
     display: block;
 }
 
-#nav >li:hover> a,
-#nav .subnav li:hover a{
-        color: #000;
+#nav>li:hover>a,
+#nav .subnav li:hover a {
+    color: #000;
     background-color: #ccc;
 }
 
-#nav li:hover a{
+#nav li:hover a {}
 
-}
-#nav li:hover .subnav{
+#nav li:hover .subnav {
     display: block;
 }
-#nav .subnav a{
+
+#nav .subnav a {
     line-height: 38px;
     padding: 0 12px;
     color: #000;
 }
+
 #nav .subnav {
-    
+
     min-width: 160px;
     display: none;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -102,23 +112,28 @@ html{
     position: fixed;
     z-index: 1;
 }
+
 #header .mobile-menu:hover {
     color: #000;
     background-color: #ccc;
 }
-.mobile-menu:hover .icon-menu{
+
+.mobile-menu:hover .icon-menu {
     color: #000;
 }
-#header .search-button:hover{
+
+#header .search-button:hover {
     color: #fff;
     background-color: #f44336;
     cursor: pointer;
 }
+
 #header .mobile-menu,
-#header .search-button{
+#header .search-button {
     float: right;
     padding: 0 20px;
 }
+
 .icon-menu {
     padding: 12px 12px;
     color: #fff;
@@ -128,22 +143,25 @@ html{
     top: 0;
     right: 0;
 }
-#mobile-menu{
+
+#mobile-menu {
     line-height: 46px;
 }
-#header .search-button .search-icon{
+
+#header .search-button .search-icon {
     color: #fff;
     font-size: 20px;
     line-height: 46px;
 }
 
-#slider{
+#slider {
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
     background: url('../img/slider/slider1.jpg') top center / cover no-repeat;
 }
-#slider .text-content{
+
+#slider .text-content {
     position: absolute;
     width: 100%;
     text-align: center;
@@ -151,24 +169,29 @@ html{
     bottom: 47px;
 
 }
-#slider .text-heading{
+
+#slider .text-heading {
     font-size: 24px;
     font-weight: 500;
 
 }
-#slider .text-discription{
+
+#slider .text-discription {
     margin-top: 25px;
     font-size: 15px;
     text-shadow: 0 0 1px #000;
 }
 
-#main{
+#main {
     overflow: hidden;
 }
-#content{;
+
+#content {
+    ;
 
 }
-#content .content-section{
+
+#content .content-section {
     width: 800px;
     padding: 64px 0 112px;
     margin-left: auto;
@@ -179,16 +202,17 @@ html{
     box-sizing: border-box;
 
 }
-.section-heading{
- text-align: center;
- letter-spacing: 500;
- font-weight: 500;
- letter-spacing: 4px;
- font-size: 30px;
+
+.section-heading {
+    text-align: center;
+    letter-spacing: 500;
+    font-weight: 500;
+    letter-spacing: 4px;
+    font-size: 30px;
 
 }
 
-.section-sub-heading{
+.section-sub-heading {
     padding: 25px 0;
     text-align: center;
     font-style: italic;
@@ -196,61 +220,72 @@ html{
     font-size: 15px;
 
 }
-.about-content{
+
+.about-content {
     text-align: center;
     text-align: justify;
     line-height: 1.4;
     font-size: 15px;
 }
-.member-list{
-     margin-top: 48px;
+
+.member-list {
+    margin-top: 48px;
 }
-.member-item{
+
+.member-item {
     width: calc(100% / 3);
     float: left;
     text-align: center;
 }
-.member-name{
+
+.member-name {
     font-size: 15px;
 }
-.member-img{
+
+.member-img {
     margin-top: 15px;
     width: 154px;
     border-radius: 4px;
 }
+
 /*Tour-Section*/
-.tour-section{
+.tour-section {
     overflow: hidden;
     background-color: #000;
 }
-.ticket-list{
+
+.ticket-list {
     margin-top: 40px;
     background-color: #fff;
 }
-.ticket-list li{
+
+.ticket-list li {
     list-style: none;
     font-size: 15px;
     padding: 11px 16px;
     border-bottom: 1px solid #ddd;
     color: #757575;
 }
-.ticket-list .sold-out{
+
+.ticket-list .sold-out {
     background-color: #f44336;
     color: #fff;
     padding: 3px 4px;
     margin-left: 16px;
 }
-.ticket-list .quantity{
-background-color: #000;
-color: #fff;
-border-radius: 50%;
-float: right;
-width: 24px;
-height: 24px;
-text-align: center;
-line-height: 24px;
-margin-top: -2px ;
+
+.ticket-list .quantity {
+    background-color: #000;
+    color: #fff;
+    border-radius: 50%;
+    float: right;
+    width: 24px;
+    height: 24px;
+    text-align: center;
+    line-height: 24px;
+    margin-top: -2px;
 }
+
 /* Place Tickets */
 .place-list {
     margin-top: 32px;
@@ -260,43 +295,51 @@ margin-top: -2px ;
     justify-content: space-between;
     margin-bottom: 32px;
 }
-.place-item{
+
+.place-item {
     flex-basis: 30%;
     /* float: left; */
 
 }
-.place-img{
+
+.place-img {
     display: block;
     width: 100%;
 
 }
-.place-img:hover{
+
+.place-img:hover {
     opacity: 0.6;
 
 }
-.place-body{
+
+.place-body {
     font-size: 15px;
     padding: 16px;
     color: #333;
     background-color: #fff;
 
 }
-.place-heading{
+
+.place-heading {
     font-weight: 600;
 
 }
-.place-time{
+
+.place-time {
     color: #757575;
     margin-top: 15px;
 }
-.place-discription{
+
+.place-discription {
     line-height: 1.4;
     margin-top: 15px;
 }
-.btn{
+
+.btn {
     color: #fff;
     background-color: #130f40;
-    text-decoration: none; 
+    text-decoration: none;
     padding: 11px 16px;
     display: inline-block;
     margin-top: 15px;
@@ -304,13 +347,15 @@ margin-top: -2px ;
     -webkit-appearance: none;
     appearance: none;
 }
-.btn:hover{
+
+.btn:hover {
     cursor: pointer;
     color: #000;
     background-color: #ccc;
 }
+
 /* Ticket Box */
-.modal{
+.modal {
     top: 0;
     bottom: 0;
     left: 0;
@@ -322,10 +367,12 @@ margin-top: -2px ;
     align-items: center;
     justify-content: center;
 }
-.modal.open{
+
+.modal.open {
     display: flex;
 }
-.modal-container{
+
+.modal-container {
     position: relative;
     background: #fff;
     width: 900px;
@@ -334,7 +381,8 @@ margin-top: -2px ;
     animation: modalFaceIn ease 0.6s;
 
 }
-.modal-header{
+
+.modal-header {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -343,10 +391,12 @@ margin-top: -2px ;
     font-size: 30px;
     color: #fff;
 }
-.modal-header .modal-heading-icon{
+
+.modal-header .modal-heading-icon {
     margin-right: 16px;
 }
-.modal .modal-close{
+
+.modal .modal-close {
     position: absolute;
     top: 0;
     right: 0;
@@ -355,25 +405,29 @@ margin-top: -2px ;
     cursor: pointer;
     opacity: 0.8;
 }
-.modal .modal-close:hover{
+
+.modal .modal-close:hover {
     color: #000;
     background: #ccc;
     opacity: 1;
 
 }
+
 .modal .modal-close:active {
     opacity: 0;
 }
 
-.modal .modal-body{
+.modal .modal-body {
     padding: 16px 16px 0 16px;
 }
-.modal .modal-label{
+
+.modal .modal-label {
     display: block;
     font-size: 15px;
     margin-bottom: 12px;
 }
-.modal .modal-input{
+
+.modal .modal-input {
 
     padding: 8px 4px 8px 4px;
     font-size: 15px;
@@ -382,7 +436,8 @@ margin-top: -2px ;
     margin-bottom: 24px;
     box-sizing: border-box;
 }
-#buy-tickets{
+
+#buy-tickets {
     background: #009688;
     border: none;
     color: #fff;
@@ -393,20 +448,24 @@ margin-top: -2px ;
     cursor: pointer;
     box-sizing: border-box;
 }
-#buy-tickets:hover{
+
+#buy-tickets:hover {
     opacity: 0.9;
 }
-.modal-footer{
+
+.modal-footer {
     padding: 24px 0;
     font-size: 15px;
     text-align: end;
     background: white;
     width: 100%;
 }
-.modal-help{
+
+.modal-help {
     color: #000;
- 
+
 }
+
 .modal-footer a {
     color: #2196f3;
 }
@@ -415,29 +474,36 @@ margin-top: -2px ;
     from {
         opacity: 0;
         transform: translateY(-140px);
-    } to {
+    }
+
+    to {
         opacity: 1;
         transform: translateY(0);
     }
 }
+
 /* Contact-Section */
-.full-contact{
+.full-contact {
     margin-top: 48px;
 
 }
-.info-web-contact:hover{
+
+.info-web-contact:hover {
     opacity: 1;
 }
-.info-web-contact i[class*="ti-"]{
-    width:30px;
+
+.info-web-contact i[class*="ti-"] {
+    width: 30px;
     display: inline;
     opacity: 0.8;
 }
-.info-contact{
+
+.info-contact {
     font-size: 18px;
     line-height: 1.2;
 }
-.form-contact{
+
+.form-contact {
 
     float: right;
     /* display: flex;
@@ -445,32 +511,38 @@ margin-top: -2px ;
     font-size: 15px;
     /* line-height: 22.5px; */
 }
-.contact-nameandemail-form{
+
+.contact-nameandemail-form {
     display: inline-flex;
     /* justify-content: space-evenly; */
 
 }
-.contact-nameandemail-form .form-name{
-    margin-right: 8px
 
+.contact-nameandemail-form .form-name {
+    margin-right: 8px
 }
-.contact-nameandemail-form .form-email{
+
+.contact-nameandemail-form .form-email {
     margin-left: 8px;
 }
-.contact-message-form{
+
+.contact-message-form {
     margin-top: 11px;
 }
-.form-control-message{
+
+.form-control-message {
     width: 352px;
     padding: 10px;
     border: 1px solid #ccc;
 }
+
 .form-control-name,
-.form-control-email{
+.form-control-email {
     padding: 10px;
     border: 1px solid #ccc;
 }
-.send-summit{
+
+.send-summit {
     border: none;
     padding: 10px 16px;
     background: #130f40;
@@ -478,25 +550,29 @@ margin-top: -2px ;
     float: right;
     margin-top: 18px;
 }
-.send-summit:hover{
+
+.send-summit:hover {
     background: #ccc;
     color: #000;
     cursor: pointer;
 }
-.info-contact{
+
+.info-contact {
     /* display: flex;
     justify-content: left; */
     float: left;
-    font-size:18px;
+    font-size: 18px;
     margin: 0px 0px 16px;
     opacity: 1;
 }
+
 /* Map */
-.map-section img{
+.map-section img {
     width: 100%;
     filter: grayscale(50%);
 }
-.signin-section {
+
+.signup-section {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -505,22 +581,17 @@ margin-top: -2px ;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: seagreen;
 }
 
 .wrapper {
     width: 600px;
-    height: 350px;
+    height: 440px;
     background: purple;
     border-radius: 12px;
 }
 
-.wrapper-r{
-    width: 600px;
-    height: 350px;
-    background: purple;
-    border-radius: 12px;
-}
+
+
 .wrapper h1 {
     font-size: 36px;
     text-align: center;
@@ -558,24 +629,29 @@ margin-top: -2px ;
     transform: translateY(-50%);
     font-size: 20px;
 }
-.wrapper .remember-forgot{
+
+.wrapper .remember-forgot {
     display: flex;
     justify-content: space-between;
     font-size: 14.5px;
     margin: -15px 0 15px;
 }
-.remember-forgot label input{
+
+.remember-forgot label input {
     accent-color: #fff;
     margin-right: 3px;
 }
-.remember-forgot a{
+
+.remember-forgot a {
     color: #fff;
     text-decoration: none;
 }
+
 .remember-forgot a:hover {
     text-decoration: underline;
 }
-.wrapper .btn{
+
+.wrapper .btn {
     width: 90%;
     height: 25px;
     background: #000;
@@ -583,54 +659,65 @@ margin-top: -2px ;
     outline: none;
     border-radius: 40px;
 }
+
 /*Footer-Section*/
 
-#footer{
-   padding: 64px 16px;
-   text-align: center;
+#footer {
+    padding: 64px 16px;
+    text-align: center;
 
 
 }
-.socials-list{
+
+.socials-list {
     font-size: 22px;
-    
+
 }
-.socials-list a{
+
+.socials-list a {
     color: rgba(0, 0, 0, 0.6);
     text-decoration: none;
 }
-.socials-list a:hover, .copyright a:hover{
+
+.socials-list a:hover,
+.copyright a:hover {
     color: rgba(0, 0, 0, 0.4);
 }
-.copyright{
+
+.copyright {
     margin-top: 15px;
     color: rgba(0, 0, 0, 0.6);
 }
-.copyright a{
+
+.copyright a {
     color: rgba(0, 0, 0, 0.6);
 }
-.contact-info a{
+
+.contact-info a {
     color: #101aef;
     opacity: 0.8;
 }
-.contact-info a:hover{
+
+.contact-info a:hover {
     opacity: 1;
 }
+
 /* Responsive Mobile */
 
 
-.form_login{
+.form_login {
     border-radius: 8;
-    background-color: #fff;  /* mau form */
+    background-color: #fff;
+    /* mau form */
     display: flex;
     justify-content: center;
 }
 
 
-.username_input{
-border-top: #000;
+.username_input {
+    border-top: #000;
 }
 
-.text_header_form{
+.text_header_form {
     margin-top: 16px;
 }
